--- a/drivers.html
+++ b/drivers.html
@@ -82,7 +82,7 @@
                 <a href="#"><img src="facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="X.png" alt="X"></a>
                 <a href="#"><img src="instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="youtube.png" alt="YouTube"></a>
             </div>
         </div>
     </footer>
