--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header-f1">
         <div class="header-content">
-            <a href="index.html" class="logo"><img src="images/logo_f1_blanc.png" alt="logo_f1"></a>
+            <a href="index.html" class="logo"><img src="logo_f1_blanc.png" alt="logo_f1"></a>
             <h1>Bienvenue dans l'univers de la Formule 1</h1>
         </div>
     </header>
@@ -68,10 +68,10 @@
             <p>&copy; 2024 Site Formule 1. Tous droits réservés.</p>
             <p>Conçu par les passionnés de Formule 1 pour les passionnés.</p>
             <div class="socials">
-                <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="images/X.png" alt="X"></a>
-                <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="X.png" alt="X"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="youtube.png" alt="YouTube"></a>
             </div>
         </div>
     </footer>
