--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu de Navigation Animé</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        // Fonction pour récupérer les dernières actualités F1
+        async function getF1News() {
+            const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // Exemple d'API de résultats
+            const data = await response.json();
+
+            // Récupération des données de la dernière course
+            const race = data.MRData.RaceTable.Races[0];
+            const raceName = race.raceName;
+            const raceDate = race.date;
+            const circuitName = race.Circuit.circuitName;
+            const results = race.Results;
+
+            // Création du contenu à afficher
+            const raceInfo = document.getElementById('race-info');
+            raceInfo.innerHTML = `
+                <h2>Dernière course: ${raceName}</h2>
+                <p>Date: ${raceDate}</p>
+                <p>Lieu: ${circuitName}</p>
+                <h3>Résultats:</h3>
+                <ul>
+                    ${results.map(result => `
+                        <li>${result.position} - ${result.Driver.familyName} (${result.Constructor.name})</li>
+                    `).join('')}
+                </ul>
+            `;
+        }
+
+        // Appeler la fonction lors du chargement de la page
+        window.onload = getF1News;
+    </script>
 </head>
 <body>
     <header class="header-f1">
@@ -34,8 +65,10 @@
 
     <main>
         <section>
-            <h2>Bienvenue sur le site Formule 1</h2>
-            <p>Explorez les sections pour en savoir plus sur les équipes, les pilotes, le calendrier des courses, et les actualités les plus récentes.</p>
+            <h2>Dernières actualités de la F1</h2>
+            <div id="race-info">
+                <!-- Les informations de la dernière course seront insérées ici -->
+            </div>
         </section>
     </main>
 
@@ -77,6 +110,5 @@
             </div>
         </div>
     </footer>
-    
 </body>
 </html>
