--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         // Fonction pour récupérer les dernières actualités F1
         async function getF1News() {
-            const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // Exemple d'API de résultats
+            const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // API des résultats de la dernière course
             const data = await response.json();
 
             // Récupération des données de la dernière course
@@ -16,20 +16,38 @@
             const raceName = race.raceName;
             const raceDate = race.date;
             const circuitName = race.Circuit.circuitName;
+            const location = race.Circuit.Location.locality + ', ' + race.Circuit.Location.country;
             const results = race.Results;
 
             // Création du contenu à afficher
             const raceInfo = document.getElementById('race-info');
             raceInfo.innerHTML = `
                 <h2>Dernière course: ${raceName}</h2>
-                <p>Date: ${raceDate}</p>
-                <p>Lieu: ${circuitName}</p>
+                <p><strong>Date:</strong> ${raceDate}</p>
+                <p><strong>Lieu:</strong> ${circuitName} - ${location}</p>
                 <h3>Résultats:</h3>
-                <ul>
-                    ${results.map(result => `
-                        <li>${result.position} - ${result.Driver.familyName} (${result.Constructor.name})</li>
-                    `).join('')}
-                </ul>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Position</th>
+                            <th>Pilote</th>
+                            <th>Écurie</th>
+                            <th>Temps</th>
+                            <th>Points</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        ${results.map(result => `
+                            <tr>
+                                <td>${result.position}</td>
+                                <td>${result.Driver.familyName} ${result.Driver.givenName}</td>
+                                <td>${result.Constructor.name}</td>
+                                <td>${result.Time ? result.Time.time : 'N/A'}</td>
+                                <td>${result.points}</td>
+                            </tr>
+                        `).join('')}
+                    </tbody>
+                </table>
             `;
         }
 
