--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu de Navigation Animé</title>
+    <title>Accueil - Formule 1</title>
     <link rel="stylesheet" href="style.css">
     <script>
         // Fonction pour récupérer les dernières actualités F1
         async function getF1News() {
-            const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // API des résultats de la dernière course
+            const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // Exemple d'API de résultats
             const data = await response.json();
 
             // Récupération des données de la dernière course
@@ -16,75 +17,28 @@
             const raceName = race.raceName;
             const raceDate = race.date;
             const circuitName = race.Circuit.circuitName;
-            const location = race.Circuit.Location.locality + ', ' + race.Circuit.Location.country;
             const results = race.Results;
 
             // Création du contenu à afficher
             const raceInfo = document.getElementById('race-info');
             raceInfo.innerHTML = `
                 <h2>Dernière course: ${raceName}</h2>
-                <p><strong>Date:</strong> ${raceDate}</p>
-                <p><strong>Lieu:</strong> ${circuitName} - ${location}</p>
+                <p>Date: ${raceDate}</p>
+                <p>Lieu: ${circuitName}</p>
                 <h3>Résultats:</h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Position</th>
-                            <th>Pilote</th>
-                            <th>Écurie</th>
-                            <th>Temps</th>
-                            <th>Points</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${results.map(result => `
-                            <tr>
-                                <td>${result.position}</td>
-                                <td>${result.Driver.familyName} ${result.Driver.givenName}</td>
-                                <td>${result.Constructor.name}</td>
-                                <td>${result.Time ? result.Time.time : 'N/A'}</td>
-                                <td>${result.points}</td>
-                            </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
+                <ul>
+                    ${results.map(result => `
+                        <li>${result.position} - ${result.Driver.familyName} (${result.Constructor.name})</li>
+                    `).join('')}
+                </ul>
             `;
         }
 
         // Appeler la fonction lors du chargement de la page
         window.onload = getF1News;
-        async function getF1News() {
-    try {
-        const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // Exemple d'API de résultats
-        const data = await response.json();
-        
-        console.log(data); // Affiche les données de l'API pour vérifier si elles sont récupérées correctement.
-
-        const race = data.MRData.RaceTable.Races[0];
-        const raceName = race.raceName;
-        const raceDate = race.date;
-        const circuitName = race.Circuit.circuitName;
-        const results = race.Results;
-
-        const raceInfo = document.getElementById('race-info');
-        raceInfo.innerHTML = `
-            <h2>Dernière course: ${raceName}</h2>
-            <p>Date: ${raceDate}</p>
-            <p>Lieu: ${circuitName}</p>
-            <h3>Résultats:</h3>
-            <ul>
-                ${results.map(result => `
-                    <li>${result.position} - ${result.Driver.familyName} (${result.Constructor.name})</li>
-                `).join('')}
-            </ul>
-        `;
-    } catch (error) {
-        console.error('Erreur lors de la récupération des données:', error); // Log l'erreur s'il y en a une
-    }
-}
-
     </script>
 </head>
+
 <body>
     <header class="header-f1">
         <div class="header-content">
@@ -112,10 +66,31 @@
     </nav>
 
     <main>
+        <section class="hero">
+            <img src="hero_image.jpg" alt="Image principale F1" class="hero-image">
+            <div class="hero-content">
+                <h2>Dernières actualités</h2>
+                <p>Découvrez les dernières nouvelles et résultats de la Formule 1</p>
+                <a href="news.html" class="cta-button">Voir toutes les actualités</a>
+            </div>
+        </section>
+
         <section>
-            <h2>Dernières actualités de la F1</h2>
+            <h2>Derniers résultats</h2>
             <div id="race-info">
                 <!-- Les informations de la dernière course seront insérées ici -->
+            </div>
+        </section>
+
+        <section>
+            <h2>Vidéos en direct et plus</h2>
+            <div class="video-gallery">
+                <div class="video-item">
+                    <iframe src="https://www.youtube.com/embed/abc123" title="Vidéo F1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-item">
+                    <iframe src="https://www.youtube.com/embed/xyz456" title="Vidéo F1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </section>
     </main>
@@ -159,4 +134,5 @@
         </div>
     </footer>
 </body>
+
 </html>
