image grille sur index

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <main>
         <section class="hero">
-            <img src="grille.png" alt="pilotes 2024" class="hero-image">
+            <img src="images/grille.png" alt="pilotes 2024" class="hero-image">
             <div class="hero-content">
                 <h2>Dernières actualités</h2>
                 <p>Découvrez les dernières nouvelles et résultats de la Formule 1</p>
