--- a/index.html
+++ b/index.html
@@ -6,50 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil - Formule 1</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        .info {
-            padding: 2rem;
-            background-color: #f4f4f4;
-            margin: 2rem 0;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            font-size: 1.8rem;
-            color: #333;
-            margin-bottom: 1rem;
-            font-weight: bold;
-        }
-
-        #race-info {
-            background-color: #fff;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        #race-info h3 {
-            font-size: 1.5rem;
-            color: #007bff;
-            margin-bottom: 1rem;
-        }
-
-        #race-info ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        #race-info ul li {
-            font-size: 1.2rem;
-            color: #555;
-            padding: 0.5rem 0;
-        }
-
-        #race-info ul li:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-    </style>
     <script>
         // Fonction pour récupérer les dernières actualités F1
         async function getF1News() {
@@ -80,13 +36,43 @@
 
         // Appeler la fonction lors du chargement de la page
         window.onload = getF1News;
+        async function getF1News() {
+    try {
+        const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // Exemple d'API de résultats
+        const data = await response.json();
+        
+        console.log(data); // Affiche les données de l'API pour vérifier si elles sont récupérées correctement.
+
+        const race = data.MRData.RaceTable.Races[0];
+        const raceName = race.raceName;
+        const raceDate = race.date;
+        const circuitName = race.Circuit.circuitName;
+        const results = race.Results;
+
+        const raceInfo = document.getElementById('race-info');
+        raceInfo.innerHTML = `
+            <h2>Dernière course: ${raceName}</h2>
+            <p>Date: ${raceDate}</p>
+            <p>Lieu: ${circuitName}</p>
+            <h3>Résultats:</h3>
+            <ul>
+                ${results.map(result => `
+                    <li>${result.position} - ${result.Driver.familyName} (${result.Constructor.name})</li>
+                `).join('')}
+            </ul>
+        `;
+    } catch (error) {
+        console.error('Erreur lors de la récupération des données:', error); // Log l'erreur s'il y en a une
+    }
+}
+
     </script>
 </head>
 
 <body>
     <header class="header-f1">
         <div class="header-content">
-            <a href="index.html" class="logo"><img src="images/logo_f1_blanc.png" alt="logo_f1"></a>
+            <a href="index.html" class="logo"><img src="images/logo_f1_blanc.png" alt="logo_f1" width="50em"></a>
             <h1>Bienvenue dans l'univers de la Formule 1</h1>
         </div>
     </header>
@@ -125,7 +111,7 @@
                 <!-- Les informations de la dernière course seront insérées ici -->
             </div>
         </section>
-
+        
         <section>
             <h2>Vidéos en direct et plus</h2>
             <div class="video-gallery">
