--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <header class="header-f1">
         <div class="header-content">
-            <a href="index.html" class="logo"><img src="images/logo_f1_blanc.png" alt="logo_f1" width="50em"></a>
+            <a href="index.html" class="logo"><img src="images/logo_f1_blanc.png" alt="logo_f1"></a>
             <h1>Bienvenue dans l'univers de la Formule 1</h1>
         </div>
     </header>
@@ -97,7 +97,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/grille.png" alt="pilotes 2024" class="hero-image">
+            <img src="images/grille.png" alt="pilotes 2024" class="hero-image" width="50em">
             <div class="hero-content">
                 <h2>Dernières actualités</h2>
                 <p>Découvrez les dernières nouvelles et résultats de la Formule 1</p>
@@ -111,7 +111,7 @@
                 <!-- Les informations de la dernière course seront insérées ici -->
             </div>
         </section>
-        
+
         <section>
             <h2>Vidéos en direct et plus</h2>
             <div class="video-gallery">
