--- a/index.html
+++ b/index.html
@@ -36,43 +36,13 @@
 
         // Appeler la fonction lors du chargement de la page
         window.onload = getF1News;
-        async function getF1News() {
-    try {
-        const response = await fetch('https://ergast.com/api/f1/current/last/results.json'); // Exemple d'API de résultats
-        const data = await response.json();
-        
-        console.log(data); // Affiche les données de l'API pour vérifier si elles sont récupérées correctement.
-
-        const race = data.MRData.RaceTable.Races[0];
-        const raceName = race.raceName;
-        const raceDate = race.date;
-        const circuitName = race.Circuit.circuitName;
-        const results = race.Results;
-
-        const raceInfo = document.getElementById('race-info');
-        raceInfo.innerHTML = `
-            <h2>Dernière course: ${raceName}</h2>
-            <p>Date: ${raceDate}</p>
-            <p>Lieu: ${circuitName}</p>
-            <h3>Résultats:</h3>
-            <ul>
-                ${results.map(result => `
-                    <li>${result.position} - ${result.Driver.familyName} (${result.Constructor.name})</li>
-                `).join('')}
-            </ul>
-        `;
-    } catch (error) {
-        console.error('Erreur lors de la récupération des données:', error); // Log l'erreur s'il y en a une
-    }
-}
-
     </script>
 </head>
 
 <body>
     <header class="header-f1">
         <div class="header-content">
-            <a href="index.html" class="logo"><img src="images/logo_f1_blanc.png" alt="logo_f1"></a>
+            <a href="index.html" class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Formula_One_logo.svg/800px-Formula_One_logo.svg.png" alt="logo_f1" width="150"></a>
             <h1>Bienvenue dans l'univers de la Formule 1</h1>
         </div>
     </header>
@@ -97,7 +67,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/grille.png" alt="pilotes 2024" class="hero-image" width="50em">
+            <img src="https://www.formula1.com/.image/t_share/MTY4MTAzNjMwMTI0NTkxNjg1/2024-pirelli-formula-1-tyres.jpg" alt="pilotes 2024" class="hero-image" width="100%">
             <div class="hero-content">
                 <h2>Dernières actualités</h2>
                 <p>Découvrez les dernières nouvelles et résultats de la Formule 1</p>
@@ -156,10 +126,10 @@
             <p>&copy; 2024 Site Formule 1. Tous droits réservés.</p>
             <p>Conçu par les passionnés de Formule 1 pour les passionnés.</p>
             <div class="socials">
-                <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="images/X.png" alt="X"></a>
-                <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook" width="30"></a>
+                <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/6/60/X_logo_2023.svg" alt="X" width="30"></a>
+                <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" width="30"></a>
+                <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Youtube_logo_2015.png" alt="YouTube" width="30"></a>
             </div>
         </div>
     </footer>
