--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header-f1">
         <div class="header-content">
             <a href="index.html" class="logo">
-                <img src="images/f1_logo_sans_fond.png" alt="logo F1" width="200">
+                <img src="images/logo_f1_blanc.png" alt="logo F1" width="200">
             </a>
             <h1>Bienvenue dans l'univers de la Formule 1</h1>
         </div>
