refonte page d'acceuil

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <a href="index.html" class="logo">
                 <img src="images/logo_f1_blanc.png" alt="logo F1" width="200">
             </a>
-            <h1>Bienvenue dans l'univers de la Formule 1</h1>
+            <h1>Bienvenue sur notre site dédié à la Formule 1</h1>
+            <p>Découvrez l'univers palpitant de la Formule 1, suivez les équipes, les pilotes et les événements en temps réel!</p>
         </div>
     </header>
 
@@ -37,14 +38,63 @@
     </nav>
 
     <main>
-        
+        <!-- Introduction au site -->
+        <section class="intro-section">
+            <h2>Explorez l'univers de la Formule 1</h2>
+            <p>Ce site est le point de référence pour tous les passionnés de Formule 1. Que vous soyez un fan des courses, un amateur des équipes ou des pilotes, ou même un curieux de l'histoire et des records, vous trouverez ici toutes les informations essentielles.</p>
+        </section>
+
+        <!-- Présentation des sections du site -->
+        <section class="site-sections">
+            <div class="section">
+                <h3>Les Équipes</h3>
+                <p>Découvrez les équipes de Formule 1 qui dominent la compétition, comme Ferrari, Mercedes et Red Bull. Apprenez leur histoire, leurs pilotes, et suivez leurs performances tout au long de la saison.</p>
+                <a href="teams.html" class="cta-button">Voir les équipes</a>
+            </div>
+            <div class="section">
+                <h3>Les Pilotes</h3>
+                <p>Qui sont les pilotes qui font vibrer les circuits ? Explorez leurs profils, leurs statistiques, et suivez les carrières des plus grands noms de la F1.</p>
+                <a href="drivers.html" class="cta-button">Voir les pilotes</a>
+            </div>
+            <div class="section">
+                <h3>Calendrier des Courses</h3>
+                <p>Ne manquez aucune course ! Consultez le calendrier des Grands Prix à venir et préparez-vous à vivre l'excitation de chaque étape de la saison.</p>
+                <a href="schedule.html" class="cta-button">Voir le calendrier</a>
+            </div>
+            <div class="section">
+                <h3>Actualités</h3>
+                <p>Restez à jour avec les dernières actualités de la Formule 1 : interviews, analyses, résultats de courses et bien plus encore.</p>
+                <a href="news.html" class="cta-button">Voir les actualités</a>
+            </div>
+        </section>
+
+        <!-- Section Statistiques -->
+        <section class="statistics-section">
+            <h2>Statistiques et Records</h2>
+            <p>La Formule 1 est un sport rempli de records impressionnants et de statistiques fascinantes. Découvrez les meilleurs moments de l'histoire de la F1, les records de vitesse, et les performances des pilotes et des équipes.</p>
+            <a href="#" class="cta-button">Explorer les statistiques</a>
+        </section>
+
+        <!-- Galerie de la Formule 1 -->
+        <section class="gallery-section">
+            <h2>Galerie</h2>
+            <p>Plongez dans notre galerie d'images et de vidéos des moments les plus mémorables de la F1. Retrouvez les photos des courses, des podiums, et des événements spéciaux.</p>
+            <a href="#" class="cta-button">Voir la galerie</a>
+        </section>
+
+        <!-- Section boutique -->
+        <section class="shop-section">
+            <h2>Boutique</h2>
+            <p>Envie de porter les couleurs de votre équipe préférée ? Découvrez notre boutique en ligne avec des produits officiels de la Formule 1 : vêtements, accessoires, et souvenirs.</p>
+            <a href="#" class="cta-button">Visiter la boutique</a>
+        </section>
     </main>
 
     <footer class="footer-f1">
         <div class="footer-content">
             <div class="footer-section about">
-                <h3>À propos</h3>
-                <p>Bienvenue sur notre site dédié à l'univers de la Formule 1. Découvrez les dernières actualités, les équipes, les pilotes, et bien plus encore !</p>
+                <h3>À propos de notre site</h3>
+                <p>Notre mission est de partager avec vous la passion de la Formule 1 à travers un site dynamique et riche en contenu. Suivez l'actualité des courses, découvrez les équipes et les pilotes, et explorez l'histoire de ce sport mythique.</p>
             </div>
             <div class="footer-section links">
                 <h3>Liens utiles</h3>
