--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a href="index.html" class="logo">
                 <img src="images/logo_f1_blanc.png" alt="logo F1" width="200">
             </a>
-            <h1>Bienvenue sur notre site dédié à la Formule 1</h1>
-            <p>Découvrez l'univers palpitant de la Formule 1, suivez les équipes, les pilotes et les événements en temps réel!</p>
+            <h1>Univers F1</h1> 
+  
         </div>
     </header>
 
